Update logging variables, for plotting

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -646,12 +646,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_real_series = torch.empty((0,2)).to(device)\n",
+    "xy_real_series_qsim = torch.empty((0,2)).to(device)\n",
     "#xy_est_series = torch.empty((0,2)).to(device)\n",
+    "xy_real_series_thsim = torch.empty((0,2)).to(device)\n",
     "\n",
-    "for q_real in q_series_qsim:\n",
-    "\txy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
-    "\txy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))"
+    "for (q_real_qsim, q_real_thsim) in zip(q_series_qsim, q_series_thsim):\n",
+    "\txy_real_qsim, _ = transforms.forward_kinematics(rp, q_real_qsim)\n",
+    "\txy_real_series_qsim = torch.cat((xy_real_series_qsim, xy_real_qsim.unsqueeze(0)))\n",
+    "\txy_real_thsim, _ = transforms.forward_kinematics(rp, q_real_thsim)\n",
+    "\txy_real_series_thsim = torch.cat((xy_real_series_thsim, xy_real_thsim.unsqueeze(0)))"
    ]
   },
   {
@@ -662,17 +665,18 @@
    "source": [
     "save_dir = f\"non-collocated_results/simulation_{timestamp}\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
-    "print(xy_start[1])\n",
+    "\n",
     "\n",
     "neural_net = False\n",
     "model_location = None\n",
-    "print(K)\n",
+    "\n",
     "metadata = {\n",
     "\t\"timestamp\": timestamp,\n",
     "\t\"Learned transform\": neural_net,\n",
     "\t\"Model location\": model_location,\n",
     "\t\"Model clockwise\": model_cw,\n",
     "\t\"Model shifting\": model_shifting, \n",
+    "\t\"Spring stiffness\": k_spring,\n",
     "\t\"normal_form gains\": [K[0, 0].item(),K[0, 1].item(),K[0, 2].item(),K[0, 3].item()],\n",
     "\t\"Actuator location\": {\"x_a\": rp[\"xa\"], \"y_a\": rp[\"ya\"]},\n",
     "\t\"xy start\": {\"x\": xy_start[0].item(), \"y\": xy_start[1].item()},\n",
@@ -692,47 +696,47 @@
    "outputs": [],
    "source": [
     "stride = 3\n",
-    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_qsim[::stride])\n",
-    "#pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
+    "pos_end_qsim, pos_elbow_qsim = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_qsim[::stride])\n",
+    "pos_end_thsim, pos_elbow_thsim = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_series_thsim[::stride])\n",
     "\n",
-    "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
-    "#frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
+    "frames_q_qsim = plotter.frame_pendulum(pos_end_qsim, pos_elbow_qsim)\n",
+    "frames_q_thsim = plotter.frame_pendulum(pos_end_thsim, pos_elbow_thsim)\n",
     "\n",
-    "data_real = {\n",
-    "\t\"frames\": frames_q_real,\n",
+    "data_qsim = {\n",
+    "\t\"frames\": frames_q_qsim,\n",
     "\t\"times\": dt,\n",
-    "\t\"name\": \"q_real\", \n",
+    "\t\"name\": \"q_qsim\", \n",
     "\t\"arm_color\": \"tab:blue\",\n",
     "\t\"act_color\": \"tab:cyan\"\n",
     "}\n",
     "\n",
-    "\"\"\"\n",
-    "data_est = {\n",
-    "\t\"frames\": frames_q_est,\n",
+    "\n",
+    "data_thsim = {\n",
+    "\t\"frames\": frames_q_thsim,\n",
     "\t\"times\": dt,\n",
-    "\t\"name\": \"q_est\",\n",
+    "\t\"name\": \"q_thsim\",\n",
     "\t\"arm_color\": \"tab:orange\", \n",
     "\t\"act_color\": \"tab:red\"\n",
     "} \n",
-    "\"\"\"\n",
     "\n",
-    "ref_pos_real = {\n",
-    "\t\"pos\": xy_des_real,\n",
-    "\t\"name\": \"real\",\n",
+    "\n",
+    "ref_pos_qsim = {\n",
+    "\t\"pos\": xy_des_hat,\n",
+    "\t\"name\": \"qsim\",\n",
     "\t\"color\": \"tab:blue\"\n",
     "}\n",
     "\n",
-    "\"\"\"\n",
-    "ref_pos_est = {\n",
-    "\t\"pos\": xy_des_est,\n",
-    "\t\"name\": \"est\",\n",
+    "\n",
+    "ref_pos_thsim = {\n",
+    "\t\"pos\": xy_des_hat,\n",
+    "\t\"name\": \"xysim\",\n",
     "\t\"color\": \"tab:orange\"\n",
     "}\n",
-    "\"\"\"\n",
     "\n",
-    "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
     "\n",
-    "frames_data = [data_real]#, data_est]\n",
+    "ref_poss = [ref_pos_qsim, ref_pos_thsim]#, ref_pos_est]#, ref_pos_naive]\n",
+    "\n",
+    "frames_data = [data_qsim, data_thsim]#, data_est]\n",
     "\n",
     "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
     "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
@@ -764,14 +768,14 @@
    "outputs": [],
    "source": [
     "datasets_q = [\n",
-    "\t#{\n",
-    "\t#    \"name\": \"est\",\n",
-    "\t#    \"values\": q_est_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:orange\"\n",
-    "\t#},\n",
     "\t{\n",
-    "\t\t\"name\": \"real\",\n",
-    "\t\t\"values\": q_series_qsim.cpu().detach().numpy(),\n",
+    "\t    \"name\": \"qsim\",\n",
+    "\t    \"values\": q_series_qsim.cpu().detach().numpy(),\n",
+    "\t    \"color\": \"tab:orange\"\n",
+    "\t},\n",
+    "\t{\n",
+    "\t\t\"name\": \"thsim\",\n",
+    "\t\t\"values\": q_series_thsim.cpu().detach().numpy(),\n",
     "\t\t\"color\": \"tab:blue\"\n",
     "\t}#,\n",
     "\t#{\n",
@@ -782,28 +786,28 @@
     "]\n",
     "\n",
     "datasets_th = [\n",
-    "\t#{\n",
-    "\t#\t\"name\": \"est\",\n",
-    "\t#\t\"values\": th_series_qsim.cpu().detach().numpy(),\n",
-    "\t#\t\"color\": \"tab:orange\"\n",
-    "\t#},\n",
     "\t{\n",
-    "\t    \"name\": \"ana\",\n",
-    "\t    \"values\": th_series_qsim.cpu().detach().numpy(),\n",
+    "\t\t\"name\": \"qsim\",\n",
+    "\t\t\"values\": th_series_qsim.cpu().detach().numpy(),\n",
+    "\t\t\"color\": \"tab:orange\"\n",
+    "\t},\n",
+    "\t{\n",
+    "\t    \"name\": \"thsim\",\n",
+    "\t    \"values\": th_series_thsim.cpu().detach().numpy(),\n",
     "\t    \"color\": \"tab:blue\"\n",
     "\t}\n",
     "]\n",
     "\n",
     "\n",
     "datasets_xy = [\n",
-    "\t#{\n",
-    "\t#    \"name\": \"est\",\n",
-    "\t#    \"values\": xy_est_series.cpu().detach().numpy(),\n",
-    "\t#    \"color\": \"tab:orange\"\n",
-    "\t#},\n",
     "\t{\n",
-    "\t\t\"name\": \"real\",\n",
-    "\t\t\"values\": xy_real_series.cpu().detach().numpy(),\n",
+    "\t    \"name\": \"qsim\",\n",
+    "\t    \"values\": xy_real_series_qsim.cpu().detach().numpy(),\n",
+    "\t    \"color\": \"tab:orange\"\n",
+    "\t},\n",
+    "\t{\n",
+    "\t\t\"name\": \"thsim\",\n",
+    "\t\t\"values\": xy_real_series_qsim.cpu().detach().numpy(),\n",
     "\t\t\"color\": \"tab:blue\"\n",
     "\t}#,\n",
     "\t#{\n",
