--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -910,67 +910,67 @@
     "show_diff = False\n",
     "\n",
     "if show_thsim:\n",
-    "\tplot_quad_vs_time(Y_series_thsim[:1000], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(1.2, 1.4))\n",
-    "\tplot_quad_vs_time(Y_series_thsim[:1000], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-0.5, 0.5))\n",
-    "\tplot_single_vs_time(v_series_thsim[:1000], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-10, 10))\n",
-    "\t#plot_single_vs_time(u_series_thsim[:1000], dt, \"u_thsim\", \"u_thsim vs time\", ylim=(-50, 50))\n",
+    "\tplot_quad_vs_time(Y_series_thsim[:500], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(1.2, 1.4))\n",
+    "\tplot_quad_vs_time(Y_series_thsim[:500], dt, \"Y_thsim\", \"Y_thsim vs time\", ylim=(-0.5, 0.5))\n",
+    "\tplot_single_vs_time(v_series_thsim[:500], dt, \"v_thsim\", \"v_thsim vs time\", ylim=(-10, 10))\n",
+    "\t#plot_single_vs_time(u_series_thsim[:500], dt, \"u_thsim\", \"u_thsim vs time\", ylim=(-50, 50))\n",
     "\t\n",
-    "\t#plot_double_vs_time(th_series_thsim[:1000], dt, \"th_thsim\", \"th_thsim vs time\")#, (1.5, 1.6))\n",
-    "\tplot_double_vs_time(th_d_series_thsim[:1000], dt, \"th_d_thsim\", \"th_d_thsim vs time\", (-2, 2))\n",
-    "\t#plot_double_vs_time(th_dd_series_thsim[:1000], dt, \"th_dd_thsim\", \"th_dd_thsim vs time\", (-10, 2))\n",
+    "\t#plot_double_vs_time(th_series_thsim[:500], dt, \"th_thsim\", \"th_thsim vs time\")#, (1.5, 1.6))\n",
+    "\tplot_double_vs_time(th_d_series_thsim[:500], dt, \"th_d_thsim\", \"th_d_thsim vs time\", (-2, 2))\n",
+    "\t#plot_double_vs_time(th_dd_series_thsim[:500], dt, \"th_dd_thsim\", \"th_dd_thsim vs time\", (-10, 2))\n",
     "\t\n",
     "\tplot_single_vs_time(alpha_beta_series_thsim[:1000, 0], dt, \"alpha\", \"alpha vs time\")#, (-2, 10))\n",
     "\tplot_single_vs_time(alpha_beta_series_thsim[:1000, 1], dt, \"beta\", \"beta vs time\")#, (0.07, 0.14))\n",
     "if show_Ysim:\n",
-    "\tplot_quad_vs_time(Y_series_Ysim[:1000], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(1.2, 1.4))\n",
-    "\tplot_quad_vs_time(Y_series_Ysim[:1000], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-0.5, 0.5))\n",
-    "\tplot_single_vs_time(v_series_Ysim[:1000], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-10, 10))\n",
+    "\tplot_quad_vs_time(Y_series_Ysim[:500], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(1.2, 1.4))\n",
+    "\tplot_quad_vs_time(Y_series_Ysim[:500], dt, \"Y_Ysim\", \"Y_Ysim vs time\", ylim=(-0.5, 0.5))\n",
+    "\tplot_single_vs_time(v_series_Ysim[:500], dt, \"v_Ysim\", \"v_Ysim vs time\", ylim=(-10, 10))\n",
     "\tpass\n",
     "if show_diff:\n",
-    "\tplot_quad_vs_time(Y_series_thsim[:1000] - Y_series_Ysim[:1000], dt, \"Y_diff\", \"Y_diff vs time\")#, ylim=(-0.002, 0.002))\n",
-    "\tplot_single_vs_time(v_series_thsim[:1000] - v_series_Ysim[:1000], dt, \"v_diff\", \"v_diff vs time\")#, ylim=(-0.1, 0.2))\n",
+    "\tplot_quad_vs_time(Y_series_thsim[:500] - Y_series_Ysim[:500], dt, \"Y_diff\", \"Y_diff vs time\")#, ylim=(-0.002, 0.002))\n",
+    "\tplot_single_vs_time(v_series_thsim[:500] - v_series_Ysim[:500], dt, \"v_diff\", \"v_diff vs time\")#, ylim=(-0.1, 0.2))\n",
     "\n",
     "Y_0sim_config = [\n",
-    "{\"type\": \"quad\", \"data\": Y_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"Y_thsim\", \"title\": \"Y_thsim vs time\", \"ylim\": (1.3, 1.5), \"log\": False},\n",
-    "{\"type\": \"quad\", \"data\": Y_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"Y_qsim\", \"title\": \"Y_qsim vs time\", \"ylim\": (1.3, 1.5), \"log\": False},\n",
-    "{\"type\": \"quad\", \"data\": Y_series_Ysim[:1000], \"dt\": dt, \"ylabel\": \"Y_Ysim\", \"title\": \"Y_Ysim vs time\", \"ylim\": (1.3, 1.5), \"log\": False}\n",
+    "{\"type\": \"quad\", \"data\": Y_series_thsim[:500], \"dt\": dt, \"ylabel\": \"Y_thsim\", \"title\": \"Y_thsim vs time\", \"ylim\": (2, 4), \"log\": False},\n",
+    "{\"type\": \"quad\", \"data\": Y_series_qsim[:500], \"dt\": dt, \"ylabel\": \"Y_qsim\", \"title\": \"Y_qsim vs time\", \"ylim\": (2, 4), \"log\": False},\n",
+    "{\"type\": \"quad\", \"data\": Y_series_Ysim[:500], \"dt\": dt, \"ylabel\": \"Y_Ysim\", \"title\": \"Y_Ysim vs time\", \"ylim\": (2, 4), \"log\": False}\n",
     "]\n",
     "\n",
     "Y_123sim_config = [\n",
-    "{\"type\": \"quad\", \"data\": Y_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"Y_thsim\", \"title\": \"Y_thsim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False},\n",
-    "{\"type\": \"quad\", \"data\": Y_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"Y_qsim\", \"title\": \"Y_qsim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False},\n",
-    "{\"type\": \"quad\", \"data\": Y_series_Ysim[:1000], \"dt\": dt, \"ylabel\": \"Y_Ysim\", \"title\": \"Y_Ysim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False}\n",
+    "{\"type\": \"quad\", \"data\": Y_series_thsim[:500], \"dt\": dt, \"ylabel\": \"Y_thsim\", \"title\": \"Y_thsim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False},\n",
+    "{\"type\": \"quad\", \"data\": Y_series_qsim[:500], \"dt\": dt, \"ylabel\": \"Y_qsim\", \"title\": \"Y_qsim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False},\n",
+    "{\"type\": \"quad\", \"data\": Y_series_Ysim[:500], \"dt\": dt, \"ylabel\": \"Y_Ysim\", \"title\": \"Y_Ysim vs time\", \"ylim\": (-0.5, 0.5), \"log\": False}\n",
     "]\n",
     "\n",
     "v_sim_config = [\n",
-    "{\"type\": \"single\", \"data\": v_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"v_thsim\", \"title\": \"v_thsim vs time\", \"ylim\": (-50, 50), \"log\": False},\n",
-    "{\"type\": \"single\", \"data\": v_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"v_qsim\", \"title\": \"v_qsim vs time\", \"ylim\": (-50, 50), \"log\": False},\n",
-    "{\"type\": \"single\", \"data\": v_series_Ysim[:1000], \"dt\": dt, \"ylabel\": \"v_Ysim\", \"title\": \"v_Ysim vs time\", \"ylim\": (-50, 50), \"log\": False}\n",
+    "{\"type\": \"single\", \"data\": v_series_thsim[:500], \"dt\": dt, \"ylabel\": \"v_thsim\", \"title\": \"v_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"single\", \"data\": v_series_qsim[:500], \"dt\": dt, \"ylabel\": \"v_qsim\", \"title\": \"v_qsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"single\", \"data\": v_series_Ysim[:500], \"dt\": dt, \"ylabel\": \"v_Ysim\", \"title\": \"v_Ysim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "th_thsim_config = [\n",
-    "{\"type\": \"double\", \"data\": th_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"th_thsim\", \"title\": \"th_thsim vs time\", \"ylim\": None, \"log\": False},\n",
-    "{\"type\": \"double\", \"data\": th_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"th_qsim\", \"title\": \"th_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "{\"type\": \"double\", \"data\": th_series_thsim[:500], \"dt\": dt, \"ylabel\": \"th_thsim\", \"title\": \"th_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"double\", \"data\": th_series_qsim[:500], \"dt\": dt, \"ylabel\": \"th_qsim\", \"title\": \"th_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "th_d_sim_config = [\n",
-    "{\"type\": \"double\", \"data\": th_d_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"th_d_thsim\", \"title\": \"th_d_thsim vs time\", \"ylim\": None, \"log\": False},\n",
-    "{\"type\": \"double\", \"data\": th_d_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"th_d_qsim\", \"title\": \"th_d_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "{\"type\": \"double\", \"data\": th_d_series_thsim[:500], \"dt\": dt, \"ylabel\": \"th_d_thsim\", \"title\": \"th_d_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"double\", \"data\": th_d_series_qsim[:500], \"dt\": dt, \"ylabel\": \"th_d_qsim\", \"title\": \"th_d_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "alpha_real_config = [\n",
-    "{\"type\": \"double\", \"data\": alphas_th_plot[:1000], \"dt\": dt, \"ylabel\": \"alpha_thsim\", \"title\": \"alpha_thsim vs time\", \"ylim\": None, \"log\": False},\n",
-    "{\"type\": \"double\", \"data\": alphas_q_plot[:1000], \"dt\": dt, \"ylabel\": \"alpha_qsim\", \"title\": \"alpha_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "{\"type\": \"double\", \"data\": alphas_th_plot[:500], \"dt\": dt, \"ylabel\": \"alpha_thsim\", \"title\": \"alpha_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"double\", \"data\": alphas_q_plot[:500], \"dt\": dt, \"ylabel\": \"alpha_qsim\", \"title\": \"alpha_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "beta_real_config = [\n",
-    "{\"type\": \"double\", \"data\": betas_th_plot[:1000], \"dt\": dt, \"ylabel\": \"beta_thsim\", \"title\": \"beta_thsim vs time\", \"ylim\": None, \"log\": False},\n",
-    "{\"type\": \"double\", \"data\": betas_q_plot[:1000], \"dt\": dt, \"ylabel\": \"beta_qsim\", \"title\": \"beta_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "{\"type\": \"double\", \"data\": betas_th_plot[:500], \"dt\": dt, \"ylabel\": \"beta_thsim\", \"title\": \"beta_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"double\", \"data\": betas_q_plot[:500], \"dt\": dt, \"ylabel\": \"beta_qsim\", \"title\": \"beta_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "u_real_config = [\n",
-    "{\"type\": \"single\", \"data\": u_series_qsim[:1000], \"dt\": dt, \"ylabel\": \"u_thsim\", \"title\": \"u_thsim vs time\", \"ylim\": None, \"log\": False},\n",
-    "{\"type\": \"single\", \"data\": u_series_thsim[:1000], \"dt\": dt, \"ylabel\": \"u_qsim\", \"title\": \"u_qsim vs time\", \"ylim\": None, \"log\": False}\n",
+    "{\"type\": \"single\", \"data\": u_series_thsim[:500], \"dt\": dt, \"ylabel\": \"u_thsim\", \"title\": \"u_thsim vs time\", \"ylim\": None, \"log\": False},\n",
+    "{\"type\": \"single\", \"data\": u_series_qsim[:500], \"dt\": dt, \"ylabel\": \"u_qsim\", \"title\": \"u_qsim vs time\", \"ylim\": None, \"log\": False}\n",
     "]\n",
     "\n",
     "\n",
