--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -1139,7 +1139,7 @@
    "outputs": [],
    "source": [
     "plot_th_0_min, plot_th_0_max = 1, 10\n",
-    "plot_th_1_min, plot_th_1_max = 0.5, 2\n",
+    "plot_th_1_min, plot_th_1_max = -1, 10\n",
     "\n",
     "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 25).unsqueeze(1).to(device)\n",
     "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 25).unsqueeze(1).to(device)\n",
@@ -1310,11 +1310,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_th_0_min, plot_th_0_max = 1, 4\n",
-    "plot_th_1_min, plot_th_1_max = 1.3, 1.7\n",
+    "plot_th_0_min, plot_th_0_max = 3, 8\n",
+    "plot_th_1_min, plot_th_1_max = 0, 4\n",
     "\n",
-    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 15).unsqueeze(1).to(device)\n",
-    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 15).unsqueeze(1).to(device)\n",
+    "th_0_range = torch.linspace(plot_th_0_min, plot_th_0_max, 10).unsqueeze(1).to(device)\n",
+    "th_1_range = torch.linspace(plot_th_1_min, plot_th_1_max, 10).unsqueeze(1).to(device)\n",
+    "\n",
+    "k_spring_plot = torch.tensor(k_spring).to(device)\n",
+    "k_spring_plot = torch.tensor([4., 4.]).to(device)\n",
+    "#rest_angles_plot = torch.tensor(rest_angles).to(device)\n",
     "\n",
     "print(k_spring_plot)\n",
     "#print(rest_angles_plot)\n",
@@ -1323,10 +1327,10 @@
     "rest_angle_1_range = torch.linspace(0., torch.pi, 10).unsqueeze(1).to(device)\n",
     "print(rest_angle_0_range)\n",
     "\n",
-    "th_d_0_range = torch.tensor([[0.]]).to(device)\n",
-    "th_d_1_range = torch.tensor([[0.]]).to(device)\n",
     "\n",
-    "alphas = torch.ones(len(th_d_0_range), len(th_d_1_range),\n",
+    "th_d_plot = torch.tensor([[0., 0.]]).to(device)\n",
+    "\n",
+    "alphas = torch.ones(len(rest_angle_0_range), len(rest_angle_1_range),\n",
     "\t\t\t\t\t len(th_0_range),   len(th_1_range),\n",
     "\t\t\t\t\t device='cpu')  # move final values to CPU for plotting)\n",
     "\n",
@@ -1358,7 +1362,6 @@
     "\t\tfor i, ra_0 in enumerate(rest_angle_0_range):\n",
     "\t\t\tfor j, ra_1 in enumerate(rest_angle_1_range):\n",
     "\t\t\t\t\t\n",
-    "\t\t\t\tth_d_plot = torch.tensor([th_d_0, th_d_1]).to(device).unsqueeze(0)\n",
     "\t\t\t\t\n",
     "\t\t\t\tif l == 0 and i == 0 and j == 0:\n",
     "\t\t\t\t\tprint(\"th_0:\", th_0.item())\n",
@@ -1424,18 +1427,17 @@
     "for i, ra_0 in enumerate(rest_angle_0_range):\n",
     "\tfor j, ra_1 in enumerate(rest_angle_1_range):\n",
     "\n",
-    "\t\tfig, axes = plt.subplots(1, n, figsize=(4*n,4))\n",
+    "\t\tfig, axes = plt.subplots(1, n, figsize=(2.6*n,2.6))\n",
     "\n",
     "\t\tfor (key, value), ax in zip(outputs.items(), axes):\n",
     "\t\t\tA_single = value[i, j]\n",
     "\t\t\tA_flat   = A_single.reshape(-1)  # flatten to (H*W,)\n",
     "\t\t\tAmax = A_flat.masked_fill(torch.isnan(A_flat), -float('inf')).max()\n",
     "\t\t\tAmin = A_flat.masked_fill(torch.isnan(A_flat), float('inf')).min()\n",
-    "\t\t\tprint(\"Amax:\", Amax)\n",
-    "\t\t\tprint(\"Amin:\", Amin)\n",
     "\t\t\tmaxvalue = torch.max(torch.tensor([-Amin/5, Amax/5]))\n",
-    "\t\t\tprint(\"maxvalue:\", maxvalue)\n",
-    "\t\t\tif key == \"alphas\" or key == \"betas\":\n",
+    "\t\t\tif key == \"Y2_plots\":\n",
+    "\t\t\t\tmaxvalue = torch.max(torch.tensor([-Amin, Amax]))\n",
+    "\t\t\tif key == \"alphas\" or key == \"betas\":# or key == \"Y2_plots\":\n",
     "\t\t\t\tnorm = TwoSlopeNorm(vmin=-maxvalue,\n",
     "\t\t\t\t\t\t\t\t\tvcenter=0,\n",
     "\t\t\t\t\t\t\t\t\tvmax=maxvalue)#A_flat.max())\n",
