--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -34,6 +34,11 @@
     "import Double_Pendulum.dynamics as dynamics\n",
     "import Plotting.pendulum_plot as pendulum_plot\n",
     "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['font.family']   = 'serif'\n",
+    "matplotlib.rcParams['font.serif']    = ['Times New Roman']\n",
+    "matplotlib.rcParams['mathtext.fontset'] = 'dejavuserif'\n",
+    "\n",
     "from functools import partial\n",
     "\n",
     "\n",
