--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -88,7 +88,7 @@
     "dt = 0.01\n",
     "\n",
     "model = autoencoders.Autoencoder_double(rp).to(device)\n",
-    "model_location = 'Models/NN_202505141642(half-q)/NN_202505141642_0.pth'\n",
+    "model_location = 'Models/NN_optimal/NN_0.pth'\n",
     "model.load_state_dict(torch.load(model_location, weights_only=True))"
    ]
   },
