separate xy generation

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -250,18 +250,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_xy_series(q_ana_series, q_nn_series):\n",
+    "def make_xy_ana_series(q_ana_series):\n",
     "\n",
     "\txy_ana_series = torch.empty((0,2)).to(device)\n",
-    "\txy_nn_series = torch.empty((0,2)).to(device)\n",
-    "\n",
-    "\tfor q_ana, q_nn in zip(q_ana_series, q_nn_series):\n",
+    "\t\n",
+    "\tfor q_ana in q_ana_series:\n",
     "\t\txy_ana, _ = transforms.forward_kinematics(rp, q_ana)\n",
     "\t\txy_ana_series = torch.cat((xy_ana_series, xy_ana.unsqueeze(0)))\n",
+    "\t\n",
+    "\treturn xy_ana_series\n",
+    "\n",
+    "def make_xy_nn_series(q_nn_series):\n",
+    "\n",
+    "\txy_nn_series = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "\tfor q_nn in q_nn_series:\n",
     "\t\txy_nn, _ = transforms.forward_kinematics(rp, q_nn)\n",
     "\t\txy_nn_series = torch.cat((xy_nn_series, xy_nn.unsqueeze(0)))\n",
-    "\t\n",
-    "\treturn xy_ana_series, xy_nn_series"
+    "\n",
+    "\treturn xy_nn_series\n"
    ]
   },
   {
