Split up simulations after check for efficiency

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -330,18 +330,26 @@
     "\t\tif print_iter is not None:\n",
     "\t\t\tif i % print_iter == 0:\n",
     "\t\t\t\tprint(\"sim nr:\", i)\n",
+    "\n",
+    "\n",
+    "\t\t# Simulate ANALYTIC trajectory\n",
     "\t\tq_ana_series, q_d_ana_series = sim_q(t_start, t_end, dt, q_start.clone(), q_d_start.clone(), u)\n",
-    "\t\tq_nn_series, q_d_nn_series = sim_q_hat(t_start, t_end, dt, q_start.clone(), q_d_start.clone(), u, model)\n",
     "\t\t\n",
     "\n",
-    "\t\txy_ana_series, xy_nn_series = make_xy_series(q_ana_series, q_nn_series)\n",
+    "\t\txy_ana_series = make_xy_ana_series(q_ana_series)\n",
     "\n",
+    "\t\t# Check for exclusion criteria, trim based on most stringent one\n",
     "\t\ttoo_long_idx = check_stretched_arm_index(xy_ana_series, arm_length)\n",
     "\t\tq_outside_idx = check_q_outside_index(q_ana_series, q0_max)\n",
     "\t\ttoo_short_idx = check_origin_close(xy_ana_series, arm_length)\n",
     "\t\tsave_idx = min(too_long_idx, q_outside_idx, too_short_idx)\n",
     "\t\t\n",
     "\t\tif save_idx > 0:\n",
+    "\n",
+    "\t\t\t# Only simulate NEURAL NETWORK trajectory if analytic makes it the whole way\n",
+    "\t\t\tq_nn_series, q_d_nn_series = sim_q_hat(t_start, t_end, dt, q_start.clone(), q_d_start.clone(), u, model)\n",
+    "\t\t\txy_nn_series = make_xy_nn_series(q_nn_series)\n",
+    "\n",
     "\t\t\tq_ana_series_list.append(q_ana_series[:save_idx])\n",
     "\t\t\tq_d_ana_series_list.append(q_d_ana_series[:save_idx])\n",
     "\t\t\txy_ana_series_list.append(xy_ana_series[:save_idx])\n",
