Change data loading

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -624,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sims = 1000\n",
+    "n_sims = 20\n",
     "n_tries = 4 * n_sims\n",
     "print_iter = max(torch.floor(torch.tensor(n_sims)/100).item(), 1)\n",
     "\n",
@@ -669,21 +669,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load the data (in case you want to append to existing trials)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_data = True\n",
+    "load_data = False\n",
+    "loaded_data_dir = \"Performance_Sims/Optimal\"\n",
+    "load_num = 0\n",
     "if load_data:\n",
-    "\tloaded_data = torch.load(\"Performance_Sims/saved_data_small_xy.pt\")\n",
-    "\n",
-    "\tq_ana_sl = loaded_data[\"q_ana_sl\"]\n",
-    "\tq_d_ana_sl = loaded_data[\"q_d_ana_sl\"]\n",
-    "\txy_ana_sl = loaded_data[\"xy_ana_sl\"]\n",
-    "\tq_nn_sl = loaded_data[\"q_nn_sl\"]\n",
-    "\tq_d_nn_sl = loaded_data[\"q_d_nn_sl\"]\n",
-    "\txy_nn_sl = loaded_data[\"xy_nn_sl\"]"
+    "\tloaded_data = torch.load(loaded_data_dir+\"/simulations_data_\" + str(load_num) + \".pt\")\n",
+    "\tprint(\"Loading simulation data from:\", loaded_data_dir)\n",
+    "else:\n",
+    "\tloaded_data = None\n",
+    "\tprint(\"Not loading simulation data.\")\n"
    ]
   },
   {
