Change run for better save_dir

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -698,8 +698,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_path = \"Performance_Sims/saved_data_small_xy_alt.pt\"\n",
-    "q_ana_sl, q_d_ana_sl, xy_ana_sl, q_nn_sl, q_d_nn_sl, xy_nn_sl = create_data_lists(qs_start, q_ds_start, us, loaded_data = None, \n",
+    "save_dir = \"Performance_Sims/Optimal\"\n",
+    "save_path = save_dir + \"/simulations_data_0.pt\"\n",
+    "file_iter = 1\n",
+    "while os.path.isfile(save_path):\n",
+    "    save_path = save_path[:-4] + str(file_iter) + \".pt\"\n",
+    "    file_iter += 1\n",
+    "\n",
+    "q_ana_sl, q_d_ana_sl, xy_ana_sl, q_nn_sl, q_d_nn_sl, xy_nn_sl = create_data_lists(qs_start, q_ds_start, us, loaded_data = loaded_data, \n",
     "\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t  print_iter = print_iter, save_path=save_path)"
    ]
   },
