--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -710,11 +710,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Save the data (also happens during generation)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
     "data_to_save = {\n",
     "\t\"q_ana_sl\": q_ana_sl,\n",
     "\t\"q_d_ana_sl\": q_d_ana_sl,\t\n",
