Add separate data loader

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -733,7 +733,32 @@
     "\t\"xy_nn_sl\": xy_nn_sl,\n",
     "}\n",
     "\n",
-    "#torch.save(data_to_save, \"Performance_Sims/saved_data_lists_full_range.pt\")"
+    "torch.save(data_to_save, save_dir + \"/simulations_data_\" + str(file_iter) + \".pt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load the data (in case you're running without generating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_data_dir = \"Performance_Sims/Optimal\"\n",
+    "load_num = 0\n",
+    "loaded_data = torch.load(load_data_dir + \"/simulations_data_\" + str(load_num) + \".pt\")\n",
+    "\n",
+    "q_ana_sl = loaded_data[\"q_ana_sl\"]\n",
+    "q_d_ana_sl = loaded_data[\"q_d_ana_sl\"]\n",
+    "xy_ana_sl = loaded_data[\"xy_ana_sl\"]\n",
+    "q_nn_sl = loaded_data[\"q_nn_sl\"]\n",
+    "q_d_nn_sl = loaded_data[\"q_d_nn_sl\"]\n",
+    "xy_nn_sl = loaded_data[\"xy_nn_sl\"]"
    ]
   },
   {
