Checks for saving and plotting of final trajectories

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -770,6 +770,7 @@
     "q_error_list = []\n",
     "xy_error_list = []\n",
     "\n",
+    "plotter_counter = 0\n",
     "for i, (qas, qdas, xyas, qns, qdns, xyns) in enumerate(zip(q_ana_sl, q_d_ana_sl, xy_ana_sl, q_nn_sl, q_d_nn_sl, xy_nn_sl)):\n",
     "\n",
     "\tq_error_series = qas - qns\n",
@@ -778,13 +779,14 @@
     "\tplot_datasets, plot_colormaps = create_plot_datasets(qas, qns, xyas, xyns)\n",
     "\tq_plot_dataset = plot_datasets[0]\n",
     "\txy_plot_dataset = plot_datasets[1]\n",
-    "\tif qas.size(0) == 300 and i%100 == 0:\n",
-    "\t\t\n",
-    "\t\tplot_q_trajs(q_plot_dataset, plot_colormaps)\n",
-    "\t\tplot_xy_trajs(xy_plot_dataset, plot_colormaps)\n",
-    "\n",
+    "\tif qas.size(0) == 300:\n",
     "\t\tq_error_list.append(q_error_series)\n",
     "\t\txy_error_list.append(xy_error_series)\n",
+    "\n",
+    "\t\tif plotter_counter < 5:\n",
+    "\t\t\tplot_q_trajs(q_plot_dataset, plot_colormaps)\n",
+    "\t\t\tplot_xy_trajs(xy_plot_dataset, plot_colormaps)\n",
+    "\t\t\tplotter_counter += 1\n",
     "\n",
     "\n"
    ]
