Some code comments

--- a/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Simulate Dynamics.ipynb
@@ -797,23 +797,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q_error_list_full = torch.nn.utils.rnn.pad_sequence(q_error_list, batch_first = True, padding_value=float(\"nan\"))\n",
-    "\n",
-    "q_error_mean = torch.nanmean(q_error_list_full, dim=0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "q_error_square = torch.square(q_error_list_full)\n",
-    "q_error_mse = torch.nanmean(q_error_square, dim=0)\n",
-    "q_error_rmse = torch.sqrt(q_error_mse)\n",
-    "\n",
-    "nan_mask = ~torch.isnan(q_error_list_full)\n",
-    "counts = nan_mask.sum(dim=(0))[:,0]\n",
-    "q_error_diff = q_error_list_full - q_error_mean\n",
-    "q_error_sqdiff = torch.square(q_error_diff)\n",
-    "q_error_sumsqdiff = torch.nansum(q_error_sqdiff, dim=0)\n",
-    "q_error_var = q_error_sumsqdiff / (counts-1).unsqueeze(1)\n",
-    "q_error_std = torch.sqrt(q_error_var)"
+    "# Number of trials that made it to the end\n",
+    "print(len(q_error_list))"
    ]
   },
   {
@@ -822,7 +807,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(counts)"
+    "# Transform the q_error_list into a pytorch tensor\n",
+    "q_error_list_full = torch.nn.utils.rnn.pad_sequence(q_error_list, batch_first = True, padding_value=float(\"nan\"))\n",
+    "\n",
+    "# Calculate the sample mean\n",
+    "q_error_mean = torch.nanmean(q_error_list_full, dim=0)\n",
+    "\n",
+    "# Calculate the rmse error manually\n",
+    "q_error_square = torch.square(q_error_list_full)\n",
+    "q_error_mse = torch.nanmean(q_error_square, dim=0)\n",
+    "q_error_rmse = torch.sqrt(q_error_mse)\n",
+    "\n",
+    "# Create mask which is True where index is NOT nan\n",
+    "nan_mask = ~torch.isnan(q_error_list_full)\n",
+    "# Log how many of the trials are not nan at each time step\n",
+    "counts = nan_mask.sum(dim=(0))[:,0]\n",
+    "\n",
+    "# Calculate the sample standard deviation manually\n",
+    "q_error_diff = q_error_list_full - q_error_mean\n",
+    "q_error_sqdiff = torch.square(q_error_diff)\n",
+    "q_error_sumsqdiff = torch.nansum(q_error_sqdiff, dim=0)\n",
+    "q_error_var = q_error_sumsqdiff / (counts-1).unsqueeze(1)\n",
+    "q_error_std = torch.sqrt(q_error_var)"
    ]
   },
   {
@@ -857,18 +863,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(torch.nan_to_num(q_error_list_full).size())\n",
-    "print(torch.max(torch.nan_to_num(q_error_list_full[:, :150, 0])))\n",
-    "print(torch.min(torch.nan_to_num(q_error_list_full[:, :150, 0])))\n",
-    "print(torch.argmin(torch.nan_to_num(q_error_list_full[:, 120, 0])))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "xy_error_rmse = calc_rmse(xy_error_list)\n",
     "xy_error_std = calc_std(xy_error_list)"
    ]
@@ -879,13 +873,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_error_std(error_rmse, error_std, ylim, y1label, y2label, yaxislabel, title_string):\n",
+    "def plot_error_std(error_rmse, error_std, ylim, y1label, y2label, yaxislabel, title_string, save_dir, file_name):\n",
     "\tt = torch.arange(error_rmse.size(0))/100\n",
     "\n",
     "\ty = error_rmse.cpu().detach().numpy()\n",
     "\tystd = error_std.cpu().detach().numpy()\n",
     "\n",
-    "\tfig, ax = plt.subplots(figsize=(8, 4))\n",
+    "\tfig, ax = plt.subplots(figsize=(5, 2.5))\n",
     "\n",
     "\t# Plot each column with shaded std area\n",
     "\tcolors = [\"C0\", \"C1\"]\n",
@@ -901,7 +895,7 @@
     "\t\tax.plot(t, (y[:, i] - ystd[:, i]), linestyle=\"--\", color = colors[i], alpha = 0.5)\n",
     "\t\tax.plot(t, (y[:, i] + ystd[:, i]), linestyle=\"--\", color = colors[i], alpha = 0.5)\n",
     "\n",
-    "\tax.set_xlabel('Time (s)')\n",
+    "\tax.set_xlabel('time (s)')\n",
     "\tax.set_ylabel(yaxislabel)\n",
     "\tax.set_title('Learned dynamics prediction error, ' + title_string)\n",
     "\tax.set_ylim(ylim)\n",
@@ -909,7 +903,9 @@
     "\tax.legend()\n",
     "\tax.grid()\n",
     "\tplt.tight_layout()\n",
-    "\tplt.show()\n"
+    "\tplt.savefig(save_dir + file_name +\".pdf\", format=\"pdf\")\n",
+    "\tplt.show()\n",
+    "\t\n"
    ]
   },
   {
@@ -918,8 +914,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_error_std(q_error_rmse, q_error_std, (0, 0.2), \"q0\", \"q1\", \"RMSE (rad)\", \"joint angles\")\n",
-    "plot_error_std(xy_error_rmse, xy_error_std, (0, 0.4), \"x\", \"y\", \"RMSE (m)\", \"end-effector position\")"
+    "\n",
+    "plot_error_std(q_error_rmse, q_error_std, (0, 0.2), r\"$q_0$\", r\"$q_1$\", \"RMSE (rad)\", \"joint angles \" + r\"$q$\", save_dir, \"/Dynamics_prediction_error_q\")\n",
+    "plot_error_std(xy_error_rmse, xy_error_std, (0, 0.4), \"x\", \"y\", \"RMSE (m)\", \"end-effector position \" + r\"$(x,y)$\", save_dir, \"/Dynamics_prediction_error_xy\")"
    ]
   },
   {
@@ -927,13 +924,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "counter = 0\n",
-    "for item in q_error_list:\n",
-    "\tif item.size(0) > 100:\n",
-    "\t\tcounter += 1\n",
-    "print(counter)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
