--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -79,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_name = \"NN_full-q\"\n",
+    "dir_name = \"NN_optimal\"\n",
     "#dir_name = \"NN_202505141642(half-q)\"\n",
     "\n",
     "dir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
