--- a/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
+++ b/Kian_code/Double_Pendulum/Learning/Visualise_Transform.ipynb
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q0_split = (-torch.pi, torch.pi)\n",
+    "q0_split = (-torch.pi, 0)\n",
     "q1_margin = 0.2\n",
     "\n",
     "plt.ion()\n",
@@ -245,6 +245,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "matplotlib.rc('text.latex', preamble=r'\\usepackage{amsmath}')\n",
     "lp.plot_model_performance(model, model_ana, plot_dataloader, dir_path, device)"
    ]
   },
