Find index of most equillibrial state

--- a/Kian_code/Controllers/test Y_loop_real.ipynb
+++ b/Kian_code/Controllers/test Y_loop_real.ipynb
@@ -1475,6 +1475,33 @@
     "\t\tplt.show()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "print(np.nanargmin(torch.abs(Y2s_plot)))\n",
+    "\n",
+    "flat_idx = np.nanargmin(torch.abs(Y2s_plot))   # this is a single scalar index into the flattened tensor\n",
+    "\n",
+    "# 2) convert to numpy and unravel\n",
+    "flat_idx = flat_idx\n",
+    "d0, d1, i0, i1 = np.unravel_index(flat_idx, Y2s.shape)\n",
+    "\n",
+    "print(\"indices (th_d_0_idx, th_d_1_idx, th0_idx, th1_idx):\", d0, d1, i0, i1)\n",
+    "print(\"minimum abs value:\", Y2s_plot[d0, d1, i0, i1].item())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
