--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -407,12 +407,12 @@
     "labels = [\"hi\", \"ho\"]\n",
     "\n",
     "bplot = ax.boxplot(boxdata,\n",
-    "                   patch_artist=True,  # fill with color\n",
-    "                   tick_labels=labels)  # will be used to label x-ticks\n",
+    "\t\t\t\t   patch_artist=True,  # fill with color\n",
+    "\t\t\t\t   tick_labels=labels)  # will be used to label x-ticks\n",
     "\n",
     "# fill with colors\n",
     "for patch, color in zip(bplot['boxes'], colors):\n",
-    "    patch.set_facecolor(color)\n",
+    "\tpatch.set_facecolor(color)\n",
     "\n",
     "plt.show()"
    ]
